fixed spacing for character elements

--- a/src/components/CharacterUnit/CharacterUnit.css
+++ b/src/components/CharacterUnit/CharacterUnit.css
@@ -1,13 +1,12 @@
 .character-unit-ctr {
-  width: 50px;
   height: 100px;
-  display: flex;
   color: white;
+  display: flex;
+  justify-content: center;
   font-size: 4rem;
+  margin: 0 0.2rem;
   font-weight: 700;
   font-family: 'lora';
-  align-items: center;
-  justify-content: center;
 }
 
 @media only screen and (max-width: 900px) and (max-height: 600px) {
