--- a/src/components/ElementUnit/ElementUnit.css
+++ b/src/components/ElementUnit/ElementUnit.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 5em;
+  font-size: 4em;
   width: 100px;
   height: 100px;
 }
